--- a/Modulo De config/assets/css/bs-theme-overrides.css
+++ b/Modulo De config/assets/css/bs-theme-overrides.css
@@ -1,5 +1,5 @@
 :root, [data-bs-theme=light] {
-  --bs-primary: #eb7e20;
+  --bs-primary: #C0601C;
   --bs-primary-rgb: 235,126,32;
   --bs-primary-text-emphasis: #5E320D;
   --bs-primary-bg-subtle: #FBE5D2;
@@ -14,8 +14,8 @@
 
 .btn-primary {
   --bs-btn-color: #000000;
-  --bs-btn-bg: #eb7e20;
-  --bs-btn-border-color: #eb7e20;
+  --bs-btn-bg: #C0601C;
+  --bs-btn-border-color: #C0601C;
   --bs-btn-hover-color: #000000;
   --bs-btn-hover-bg: #EE9141;
   --bs-btn-hover-border-color: #ED8B36;
@@ -24,22 +24,22 @@
   --bs-btn-active-bg: #EF984D;
   --bs-btn-active-border-color: #ED8B36;
   --bs-btn-disabled-color: #000000;
-  --bs-btn-disabled-bg: #eb7e20;
-  --bs-btn-disabled-border-color: #eb7e20;
+  --bs-btn-disabled-bg: #C0601C;
+  --bs-btn-disabled-border-color: #C0601C;
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #eb7e20;
-  --bs-btn-border-color: #eb7e20;
+  --bs-btn-color: #C0601C;
+  --bs-btn-border-color: #C0601C;
   --bs-btn-focus-shadow-rgb: 235,126,32;
   --bs-btn-hover-color: #000000;
-  --bs-btn-hover-bg: #eb7e20;
-  --bs-btn-hover-border-color: #eb7e20;
+  --bs-btn-hover-bg: #C0601C;
+  --bs-btn-hover-border-color: #C0601C;
   --bs-btn-active-color: #000000;
-  --bs-btn-active-bg: #eb7e20;
-  --bs-btn-active-border-color: #eb7e20;
-  --bs-btn-disabled-color: #eb7e20;
+  --bs-btn-active-bg: #C0601C;
+  --bs-btn-active-border-color: #C0601C;
+  --bs-btn-disabled-color: #C0601C;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #eb7e20;
+  --bs-btn-disabled-border-color: #C0601C;
 }
 
