--- a/Modulo Analisis De Datos/assets/css/Hover.css
+++ b/Modulo Analisis De Datos/assets/css/Hover.css
@@ -6,37 +6,21 @@
 }
 
 #btSend-Cont {
-  background: #072934;
+  background: var(--bs-CR-orange);
   transition: 0.2s ease-in-out;
 }
 
 #btSend {
-  color: #929292;
-  transition: 0.2s ease-in-out;
-}
-
-#btIMG {
-  color: #072934;
+  color: var(--bs-gray-dark);
   transition: 0.2s ease-in-out;
 }
 
 /* Hover Properties */
 
 #btSend-Cont:hover {
-  background: #eb7e20;
+  background: var(--bs-CR-black);
 }
 
 #btSend-Cont:hover #btSend {
-  color: #072934;
+  color: #929292;
 }
-
-#btIMG:hover {
-  color: #e05a30;
-}
-
-#btIMG-Cont:hover {
-  background: #083340;
-}
-
-/* No focus (Mobile) */
-
