Nav Bar en todos los html de Mod. Analisis

--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -1,3 +1,12 @@
+/* Font: Hedliner-Sans-Mono-Font */
+@font-face {
+  font-family: 'hedliner';
+  src: url('../../assets/fonts/hedliner-webfont.woff') format('woff'),
+  url('../../assets/fonts/hedliner-webfont.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .list-group {
   --bs-list-group-color: var(--bs-body-color);
   --bs-list-group-bg: var(--bs-body-bg);
