Links e imágenes ahora se pueden recibir del Encuestador con getMessage() y dentro de sendMessage() | LoadingMSG al finalizar encuesta arreglado | Color de ícono de chat vacío | Chat.css: Import Correcto de IBM League Spartan | Responsiveness.css: Anchors/Links | Hover.css y background de: Boton de Saludo inicial | Funciones de Prueba Eliminadas y código ordenado | Se quitó IBM League Spartan de Mensajes

--- a/Recolección de Datos/assets/css/Hover.css
+++ b/Recolección de Datos/assets/css/Hover.css
@@ -37,3 +37,22 @@
 #btIMG-Cont:hover {
   background: var(--bs-CR-orange-2);
 }
+
+/* Links */
+
+a {
+  color: #2e3e43;
+}
+
+a:hover {
+  color: #4dc0e3;
+}
+
+/* Botón Iniciar Chat */
+#AceptarChat {
+  color:var(--bs-CR-white);
+}
+
+#AceptarChat:hover {
+  color:var(--bs-CR-orange);
+}
