--- a/Recolección de Datos/assets/css/Chat.css
+++ b/Recolección de Datos/assets/css/Chat.css
@@ -7,6 +7,9 @@
   font-style: normal;
 }
 
+/* Font: IBM League Spartan */
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
 img {
   border-radius: 5px;
 }
@@ -56,4 +59,3 @@ img {
   background: #2e3e43;
   border-radius: 15px;
 }
-
