Link a Página Principal Overview.html;Links de API cambiados | Responsiveness.css: Anchors/Links | Hover.css: Boton de Saludo inicial; Anchors/Links; Nav Bar Hover (Falta Filtros) | Se quitó IBM League Spartan de Mensajes | LoadingMSG al finalizar encuesta arreglado | Color de ícono de chat vacío | Código ordenado

--- a/Modulo Analisis De Datos/assets/css/Hover.css
+++ b/Modulo Analisis De Datos/assets/css/Hover.css
@@ -24,3 +24,34 @@
 #btSend-Cont:hover #btSend {
   color: #929292;
 }
+
+/* Links */
+
+a {
+  color: #2e3e43;
+}
+
+a:hover {
+  color: #4dc0e3;
+}
+
+/* Botón Iniciar Chat */
+
+#AceptarChat {
+  color:var(--bs-CR-white);
+}
+
+#AceptarChat:hover {
+  color:var(--bs-CR-orange);
+}
+
+/* Nav Bar */
+
+.navbar-dark .navbar-nav .nav-link {
+  color: var(--bs-CR-white);
+}
+
+.nav-item:hover span {
+  color: var(--bs-CR-orange);
+  transition: 0.2s ease-in-out;
+}
