--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -168,3 +168,19 @@ input:checked + .slider:before {
     display: none;
   }
 }
+
+.list-group-item.active {
+  z-index: 2;
+  color: var(--bs-list-group-active-color);
+  background-color: #C0601C;
+  border-color: var(--bs-list-group-active-border-color);
+}
+
+
+@media (max-width: 1080px) {
+    img {
+        display: none;
+    }
+}
+
+
