Funcion ampliar Type-Box, funcion endChat(), cambios en styles, codigo innecesario, import IBM Plex Sans, Overflow Socrates arreglado

--- a/Modulo Analisis De Datos/assets/css/Chat.css
+++ b/Modulo Analisis De Datos/assets/css/Chat.css
@@ -30,6 +30,6 @@ img {
 }
 
 #Message-Input::-webkit-scrollbar-thumb {
-  background: #2e3e43;
+  background: var(--bs-CR-gray);
   border-radius: 15px;
 }
