Mismos cambios que en

--- a/Recolección de Datos/assets/css/Chat.css
+++ b/Recolección de Datos/assets/css/Chat.css
@@ -10,6 +10,9 @@
 /* Font: IBM League Spartan */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
+/* Font: IBM Plex Sans */
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 img {
   border-radius: 5px;
 }
@@ -56,6 +59,6 @@ img {
 }
 
 #Message-Input::-webkit-scrollbar-thumb {
-  background: #2e3e43;
+  background: var(--bs-CR-gray);
   border-radius: 15px;
 }
