--- a/Recolección de Datos/assets/css/Responsiveness.css
+++ b/Recolección de Datos/assets/css/Responsiveness.css
@@ -73,12 +73,6 @@
   }
 }
 
-@media (min-height: 1000px) {
-  #TypeB-Container {
-    /*height: 10px;*/
-  }
-}
-
 /* Type Box */
 
 @media (min-width: 300px) {
@@ -289,6 +283,8 @@
 
 #Message-Input {
   font-size: 1rem;
+  height: 100%;
+  position: relative;
 }
 
 @media (min-width: 500px) {
