Assets/Hover.css eliminado (Queda assets_accounts/Hover.css) | Hover.css: NavBar colors | Imports de Hover.css | assets_accounts/untitled.css eliminado | Variables color en bootstrap.min.css | Active Links | Removido: Desactivar links al abrir CrearEncuestador | Colores a variables | Cambio de todas las fonts (html y js)

--- a/Modulo De config/assets/assets_accounts/css/Hover.css
+++ b/Modulo De config/assets/assets_accounts/css/Hover.css
@@ -18,3 +18,13 @@ a:hover {
   color: #4dc0e3;
 }
 
+/* Nav Bar */
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #FFFFFF;
+}
+
+.nav-item:hover span {
+  color: var(--bs-CR-orange);
+  transition: 0.2s ease-in-out;
+}
