--- a/Modulo Analisis De Datos/assets/css/Responsiveness.css
+++ b/Modulo Analisis De Datos/assets/css/Responsiveness.css
@@ -40,12 +40,12 @@
 /* Chat Container */
 
 #Chat-Box {
-  height: 90%;
+  height: 86%;
 }
 
 @media (min-height: 900px) {
   #Chat-Box {
-    height: 92%;
+    height: 88%;
   }
 }
 
@@ -365,6 +365,49 @@
   .BotIMG-Div {
     margin-left: -9px;
     margin-right: 9px;
+  }
+}
+
+#Copyright-Legend {
+  height: 4%;
+}
+/* Copyright Legend Text */
+.Copyright-Legend, p {
+  font-size: 0.45rem;
+}
+@media (min-width: 400px) {
+  .Copyright-Legend, p {
+    font-size: 0.5rem;
+  }
+}
+@media (min-width: 500px) {
+  .Copyright-Legend, p {
+    font-size: 0.6rem;
+  }
+}
+@media (min-width: 600px) {
+  .Copyright-Legend, p {
+    font-size: 0.7rem;
+  }
+}
+@media (min-width: 700px) {
+  .Copyright-Legend, p {
+    font-size: 0.8rem;
+  }
+}
+@media (min-height: 1000px) and (max-width: 500px) {
+  .Copyright-Legend, p {
+    font-size: 0.45rem;
+  }
+}
+@media (min-height: 1000px) and (min-width: 500px) {
+  .Copyright-Legend, p {
+    font-size: 0.6rem;
+  }
+}
+@media (min-height: 1000px) and (min-width: 700px) {
+  .Copyright-Legend, p {
+    font-size: 0.7rem;
   }
 }
 
