--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -184,3 +184,36 @@ input:checked + .slider:before {
 }
 
 
+#overlay {
+  position: fixed; /* Posiciona el overlay de manera fija */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px); /* Filtro de desenfoque */ 
+  display: flex;
+  align-items: center; /* Centra verticalmente */
+  justify-content: center; /* Centra horizontalmente */
+  z-index: 1000; /* Asegura que el overlay esté por encima del contenido */
+  display: none; /* Ocultar por defecto */
+}
+
+#overlayContent {
+  background: var(--bs-CR-white);
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 50%;
+  max-width: 600px; /* Opcional: limita el ancho máximo */
+  box-sizing: border-box; /* Incluye el padding en el ancho total */
+}
+
+@media (max-width: 768px) {
+  #overlayContent {
+      width: 90%;
+  }
+
+  #overlayContent p {
+      font-size: 1rem;
+  }
+}
