--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -37,7 +37,7 @@
 }
 
 .form-control {
-  font-family: 'hedliner', sans-serif;box-shadow: inset 2px 2px 5px 1px #6d6d6d; color: #072934;
+  font-family: 'hedliner', sans-serif; color: #072934;
 }
 
 .switch {
@@ -76,7 +76,7 @@
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #C0601C;
+
 }
 
 .slider.round {
@@ -127,7 +127,7 @@ input:checked + .slider {
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #C0601C;
+
 }
 
 input:checked + .slider:before {
@@ -202,7 +202,7 @@ input:checked + .slider:before {
   background: var(--bs-CR-white);
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
   width: 50%;
   max-width: 600px; /* Opcional: limita el ancho máximo */
   box-sizing: border-box; /* Incluye el padding en el ancho total */
