--- a/Modulo De config/assets/css/untitled.css
+++ b/Modulo De config/assets/css/untitled.css
@@ -9,8 +9,8 @@
   --bs-list-group-action-color: var(--bs-secondary-color);
   --bs-list-group-action-hover-color: var(--bs-emphasis-color);
   --bs-list-group-action-hover-bg: var(--bs-tertiary-bg);
-  --bs-list-group-action-active-color: var(--bs-body-color);
-  --bs-list-group-action-active-bg: var(--bs-secondary-bg);
+  --bs-list-group-action-active-color: var(--bs-CR-gray);
+  --bs-list-group-action-active-bg: var(--bs-CR-orange);
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
