--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -18,12 +18,12 @@
   --bs-list-group-action-color: var(--bs-secondary-color);
   --bs-list-group-action-hover-color: var(--bs-emphasis-color);
   --bs-list-group-action-hover-bg: var(--bs-tertiary-bg);
-  --bs-list-group-action-active-color: var(--bs-body-color);
-  --bs-list-group-action-active-bg: var(--bs-secondary-bg);
+  --bs-list-group-action-active-color: var(--bs-CR-gray);
+  --bs-list-group-action-active-bg: var(--bs-CR-orange);
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
-  --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: var(--bs-primary);
+  --bs-list-group-active-color: var(--bs-CR-gray);
+  --bs-list-group-active-bg: var(--bs-CR-orange);
   --bs-list-group-active-border-color: #072934;
   display: flex;
   flex-direction: column;
