--- a/Modulo De config/assets/assets_accounts/css/Hover.css
+++ b/Modulo De config/assets/assets_accounts/css/Hover.css
@@ -8,6 +8,13 @@ svg:hover {
   color: #4dc0e3;
 }
 
+th, td {
+      border: 1px solid black; /* Adds lines around cells */
+      padding: 8px;
+      text-align: left;
+    }
+
+    
 /* Links */
 
 a {
