--- a/Modulo Analisis De Datos/assets/css/untitled.css
+++ b/Modulo Analisis De Datos/assets/css/untitled.css
@@ -94,6 +94,11 @@ button {
   border-radius: 5px;
 }
 
+::selection {
+  background-color: var(--bs-CR-orange);/* Fondo de selección */
+  color: white;              /* Color del texto seleccionado */
+}
+
 
 .switch {
   position: relative;
