migrating colors from html and hover.css

--- a/Recolección de Datos/assets/css/Chat.css
+++ b/Recolección de Datos/assets/css/Chat.css
@@ -35,6 +35,7 @@ img {
 
 #Chat-BG {background: linear-gradient(#ff000000 50%, var(--bs-CR-gray-dark) 130%), transparent;}
 
+#Header-BG {background: linear-gradient(160deg, var(--bs-CR-black) 0%, #2f3034 40%, var(--bs-CR-gray) 100%);}
 #Bot-Name{color: #aaa7aa;}
 #Bot-Status {color: var(--bs-CR-orange-2);}
 
@@ -43,6 +44,13 @@ img {
 #EmptyF-BG p:first-child {color: #aaa7aa;}
 #EmptyF-BG p:nth-child(2) {color: #fff;}
 #EmptyF-BG p:nth-child(4) {color: var(--bs-CR-orange-2);}
+
+#TypeB-BG {background: var(--bs-CR-black);}
+
+#btIMG, #btSend-Icon{
+  fill: var(--bs-CR-orange-2);
+  color: var(--bs-CR-orange-2);
+}
 
 /* Feed Scrollbar */
 
