--- a/Recolección de Datos/assets/css/Chat.css
+++ b/Recolección de Datos/assets/css/Chat.css
@@ -44,23 +44,23 @@ body {
 
 /* Some Chat Colors */
 
-#Chat-BG {background: linear-gradient(transparent 50%, var(--bs-CR-shadow) 85%, var(--bs-CR-orange) 110%);}
+#Chat-BG {background: linear-gradient(transparent 50%, var(--bs-CR-shadow) 85%, var(--bs-CR-gray) 110%);}
 
-#Header-BG {background: linear-gradient(160deg, var(--bs-CR-black) 0%, #2f3034 40%, var(--bs-CR-gray) 100%);}
+#Header-BG {background: linear-gradient(160deg, var(--bs-CR-black) 0%, #2f3034 40%, var(--bs-CR-orange) 100%);}
 #Bot-Name{color: #aaa7aa;}
-#Bot-Status {color: var(--bs-CR-gray);}
+#Bot-Status {color: var(--bs-CR-orange);}
 
-#EmptyF-BG {background: linear-gradient(160deg, var(--bs-CR-black) 35%, var(--bs-CR-orange) 100%);}
+#EmptyF-BG {background: linear-gradient(160deg, var(--bs-CR-black) 35%, var(--bs-CR-gray) 100%);}
 
 #EmptyF-BG p:first-child {color: #aaa7aa;}
 #EmptyF-BG p:nth-child(2) {color: #fff;}
-#EmptyF-BG p:nth-child(4) {color: var(--bs-CR-orange-2);}
+#EmptyF-BG p:nth-child(4) {color: var(--bs-CR-orange);}
 
 #TypeB-BG {background: linear-gradient(165deg, #4b4b4b 50%, #2f3034 65%, var(--bs-CR-black) 100%);}
 
 #btIMG, #btSend-Icon{
-  fill: var(--bs-CR-gray);
-  color: var(--bs-CR-gray);
+  fill: var(--bs-CR-orange);
+  color: var(--bs-CR-orange);
 }
 
 #Copyright-Legend {color: var(--bs-CR-white)}
