--- a/Recolección de Datos/assets/css/Hover.css
+++ b/Recolección de Datos/assets/css/Hover.css
@@ -10,6 +10,11 @@
   background: var(--bs-CR-orange-2);
 }
 
+#btIMG-Cont:hover #btIMG, #btSend-Cont:hover #btSend-Icon {
+  fill: var(--bs-CR-gray-dark);
+  color: var(--bs-CR-gray-dark);
+}
+
 /* Links */
 
 a {
