--- a/Recolección de Datos/assets/css/Hover.css
+++ b/Recolección de Datos/assets/css/Hover.css
@@ -3,6 +3,7 @@
 .user-msg-card, .bot-msg-card {transition: 0.2s ease-in-out;}
 #btIMG-Cont, #btSend-Cont {transition: 0.2s ease-in-out;}
 #EmptyF-BG {transition: 0.2s ease-in-out;}
+#Message-Input {border:none; transition: 0.1s ease-in-out;}
 
 /* Hover Properties */
 
@@ -15,7 +16,31 @@
   color: var(--bs-CR-black);
 }
 
-#EmptyF-BG:hover {transform: scale(1.05);}
+#EmptyF-BG:hover {transform: scale(1.05); cursor: default;}
+
+#Message-Input:focus {
+  outline: none;
+  box-shadow: 0 0 0 1px var(--bs-CR-white), 0 0 0 3px var(--bs-CR-orange-2);
+}
+
+.btn {
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+.btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+  transition: left 0.5s;
+}
+.btn:hover::before {
+  left: 100%;
+}
 
 /* Links */
 
@@ -36,21 +61,3 @@ a:hover {
   color:var(--bs-CR-orange);
 }
 
-.btn{
-  transition: all 0.3s ease;
-  position: relative;
-  overflow: hidden;
-}
-.btn::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
-  transition: left 0.5s;
-}
-.btn:hover::before {
-  left: 100%;
-}
