--- a/Recolección de Datos/assets/css/Chat.css
+++ b/Recolección de Datos/assets/css/Chat.css
@@ -33,7 +33,7 @@ img {
 /* Some Chat Colors */
 
 #Chat-BG {
-  background: linear-gradient(rgb(from var(--bs-CR-white) r g b / 0.3) 70%, #2f3034d4 90%, rgb(from var(--bs-CR-black) r g b / 1) 100%);
+  background: linear-gradient(rgb(from var(--bs-CR-white) r g b / 0.4) 82%, rgb(from var(--bs-CR-black) r g b / 0.3) 90%, rgb(from var(--bs-CR-black) r g b / 1) 105%);
 }
 
 #Header-BG {background: linear-gradient(160deg, var(--bs-CR-black) 0%, #2f3034 40%, var(--bs-CR-orange) 100%);}
